# teacher_assist

./: .env.example  .gitignore  CLAUDE.md  CREATE_DESKTOP_SHORTCUT.bat  PR_REVIEW_FIXES.md  README.md  SETUP.md  STARTUP_GUIDE.md  db.sqlite3  package.json  pyproject.toml  requirements.txt  start.bat  start.sh  start_silent.vbs  stop.bat
.github/workflows/: tests.yml
ai_service/: README.md  __init__.py  config.py  constants.py  db_client.py  db_models.py  main.py  mock_service.py  workflow.py
ai_service/nodes/: __init__.py  formatters.py  llm_client.py  llm_generator.py  loaders.py  prompt_builder.py  validators.py
ai_service/templates/: fill_work_plan.txt  fill_work_plan_eng.txt
ai_service/tests/: __init__.py  conftest.py  test_api.py  test_db_client.py  test_llm_client.py  test_llm_client.py.bak  test_mock_service.py  test_validators.py  test_workflow.py
ai_service/utils/: __init__.py  console.py  cost_tracker.py  formatters.py  paths.py  response_schema.py  schema.py
common/: __init__.py  models.py
docs/: PRD.md  ai_api.md  ai_service_design.md  db.md  db_init.md  db_schema.md  django_api.md  projectPremise.md  react_migration.md  ui.md
refs/: major_curriculum_points.csv  minor_curriculum_points.csv
webserver/: README.md  db.sqlite3  manage.py
webserver/hello/: views.py
webserver/lessonplanner/: apps.py  forms.py  models.py  package.json  tests.py  tests_db_service.py  urls.py  views.py
webserver/teachertools/: asgi.py  settings.py  urls.py  wsgi.py
webserver/workplanapi/: apps.py  forms.py  tests.py  urls.py  views.py
(+72 files in other folders)
